Week2/Day10/GatewayAPIApp/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-demo
  labels:
    name: gateway-demo
    purpose: gateway-api-demonstration
